--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --light-bg: #ffffff;
+  --light-text: #333333;
+  --dark-bg: #333333;
+  --dark-text: #ffffff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +12,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+ol, ul {
+	list-style: none;
 }
 
 code {
@@ -25,13 +36,26 @@ h1{
 
 nav{
   display: flex;
-  width: 80vw;
+  width: 100vw;
   justify-content: flex-start;
   padding: 1rem;
+  & ul {
+    display: flex;
+  }
 }
 
+.light {
+  background-color: var(--light-bg);
+  color: var(--light-text);
+  transition: all 0.3s ease;
+}
+
+.dark {
+  background-color: var(--dark-bg);
+  color: var(--dark-text);
+  transition: all 0.3s ease;
+}
 a{
-  color: #000;
   text-decoration: none;
   margin: 5px;
   cursor: pointer;
@@ -47,7 +71,7 @@ footer {
   padding: 2rem;
   position: relative;
   bottom: 0;
-  width: 90%;
+  width: 100%;
   height: 40px;
   margin-top: 2rem;
 }
@@ -95,7 +119,7 @@ form{
 }
 
 table {
- border-collapse: collapse;
+  border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
     display: table;
@@ -114,9 +138,9 @@ tr:nth-child(even) {
 }
 
 .dark{
-  background-color: #12121296;
   color: white;
 }
-.dark > a {
+.dark > lu, .dark a:visited {
   color: white;
 }
+
