--- a/src/index.css
+++ b/src/index.css
@@ -1,146 +1,229 @@
 :root {
-  --light-bg: #ffffff;
-  --light-text: #333333;
-  --dark-bg: #333333;
-  --dark-text: #ffffff;
+	--light-bg: #ffffff;
+	--light-text: #333333;
+	--light-page: #cccccc;
+	--dark-bg: #333333;
+	--dark-text: #ffffff;
+	--dark-page: #666666;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+		'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-ol, ul {
+ol,
+ul {
 	list-style: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-.favButton{
-  background-color: rgba(136, 136, 136, 0.116);
-  padding: 10px;
-  border: none;
-  width: 100%;
-  cursor: pointer;
-}
-
-h1{
-  text-align: center;
+.favButton {
+	background-color: rgba(136, 136, 136, 0.116);
+	padding: 10px;
+	border: none;
+	width: 100%;
+	cursor: pointer;
 }
 
-nav{
-  display: flex;
-  width: 100vw;
-  justify-content: flex-start;
-  padding: 1rem;
-  & ul {
-    display: flex;
-  }
+h1 {
+	text-align: center;
+}
+
+nav {
+	display: flex;
+	height: 2.5rem;
+	justify-content: space-between;
+	padding-bottom: 0.5rem;
+
+	& ul {
+		display: flex;
+		padding-bottom: 0.5rem;
+		& li {
+			margin-inline: 0.25rem;
+		}
+	}
+
+	& .themeToggle {
+		padding: 0.75rem;
+		& button {
+			border-radius: 10px;
+			height: 1.5rem;
+			width: 3rem;
+		}
+	}
+}
+
+.page-light {
+	background-color: var(--light-page);
+	height: calc(100vh - 4rem);
+	padding-inline: 2rem;
+	color: var(--light-text);
+	border: var(--light-text) 1px solid;
+}
+.page-dark {
+	background-color: var(--dark-page);
+	height: calc(100vh - 4rem);
+	padding-inline: 2rem;
+	color: var(--dark-text);
+	border: var(--dark-text) 1px solid;
 }
 
 .light {
-  background-color: var(--light-bg);
-  color: var(--light-text);
-  transition: all 0.3s ease;
+	background-color: var(--light-bg);
+	color: var(--light-text);
+	transition: all 0.3s ease;
+	a {
+		text-decoration: none;
+		cursor: pointer;
+	}
 }
 
 .dark {
-  background-color: var(--dark-bg);
-  color: var(--dark-text);
-  transition: all 0.3s ease;
+	background-color: var(--dark-bg);
+	color: var(--dark-text);
+	transition: all 0.3s ease;
 }
-a{
-  text-decoration: none;
-  margin: 5px;
-  cursor: pointer;
+a {
+	text-decoration: none;
+	cursor: pointer;
 }
-a:hover{
-  color: rgb(136, 136, 136);
-} 
+a:hover {
+	color: rgb(136, 136, 136);
+}
 
 footer {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  padding: 2rem;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  margin-top: 2rem;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2rem;
 }
 
-footer > img{
-  width: 200px;
-  margin: 0;
+footer > img {
+	width: 200px;
+	margin: 0;
 }
-footer > p{
-  margin: 0;
-  padding-top: 0.7rem;
-}
-
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 300px;
-  height: 100px;
-  margin: 0 auto;
+footer > p {
+	margin: 0;
 }
 
-.card{
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-  width: 200px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  border: 0.5px solid rgb(136, 136, 136);
+form {
+	display: flex;
+	flex-direction: column;
+	width: 300px;
+	height: 220px;
+	margin: auto;
 }
 
-.card:hover{
-  border: 0.5px solid rgb(206, 217, 142);
+.card {
+	width: 250px;
+	border-radius: 12px;
+	padding-inline: 1rem;
+	padding-bottom: 0.5rem;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
+	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	background-color: #ffffff;
+	&:hover {
+		transform: translateY(-5px);
+		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+	}
+	&.dark {
+		background-color: var(--light-text);
+		color: #ecf0f1;
+	}
+	&.dark:hover {
+		background-color: var(--light-text);
+		color: #ecf0f1;
+		box-shadow: 0 6px 12px rgba(255, 255, 255, 0.15);
+	}
 }
 
-.card-grid{
-  display: flex;
-  justify-content: space-evenly;
-  gap: 1rem;
-  width: 90vw;
-  height: auto;
-  flex-wrap: wrap;
-  margin: 0 auto;
+.favorite-btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background: none;
+	border: none;
+	font-size: 24px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+}
+
+.favorite-btn:hover {
+	transform: scale(1.2);
+}
+
+.card-content {
+	display: block;
+	text-decoration: none;
+	padding: 15px;
+	text-align: center;
+	color: inherit;
+}
+
+.card-name {
+	font-size: 1.2rem;
+	font-weight: 600;
+}
+
+/* .card-username {
+	margin: 0;
+	color: #7f8c8d;
+	font-size: 0.9rem;
+}
+
+.dark .card-username {
+	color: #bdc3c7;
+} */
+
+.card:hover {
+	border: 0.5px solid rgb(206, 217, 142);
+}
+
+.card-grid {
+	display: flex;
+
+	justify-content: space-evenly;
+	gap: 1rem;
+	max-width: 120rem;
+	height: auto;
+	flex-wrap: wrap;
+	margin: 0 auto;
 }
 
 table {
-  border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    display: table;
-    border: 1px solid #ccc;
-
+	border-collapse: collapse;
+	border-spacing: 0;
+	width: 100%;
+	display: table;
+	border: 1px solid #ccc;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+td,
+th {
+	border: 1px solid #dddddd;
+	text-align: left;
+	padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+	background-color: #dddddd;
 }
 
-.dark{
-  color: white;
+.dark {
+	color: white;
 }
-.dark > lu, .dark a:visited {
-  color: white;
+.dark > lu,
+.dark a:visited {
+	color: white;
 }
-
